--- a/press/letterpress.config
+++ b/press/letterpress.config
@@ -1,6 +1,6 @@
 markdown_ext: .md
 base_url: http://wangling.me
-site_dir: /srv/www/wangling.me/public_html/
+site_dir: /dev/shm/letterpress
 # Refer to http://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior
 date_format: %m/%d/%Y
 math_delimiter: $
